# yolo_object_detection

./: CMakeLists.txt  README.md  package.xml
cfg/: coco.data
include/: darknet.h  examples.h  image.h  utils.h
launch/: yolo.launch
scripts/: run.sh
src/: cuda.c  darknet.cpp  demo_ros.cpp  image.c
src/examples/: art.c
